[gd_scene load_steps=3 format=3 uid="uid://dx16vew5flo3q"]

[ext_resource type="Script" path="res://Scripts/Inventory/InventorySpaceScript.gd" id="1_jk7qr"]
[ext_resource type="Texture2D" uid="uid://c5lltvcy6t0fs" path="res://Gui/Images/Panel/inventory_panel.png" id="2_esuf0"]

[node name="InventorySpace" type="Panel" groups=["InventorySpot"]]
offset_right = 99.0
offset_bottom = 101.0
script = ExtResource("1_jk7qr")

[node name="FrameImage" type="TextureRect" parent="."]
modulate = Color(0.627451, 0.627451, 0.627451, 1)
layout_mode = 2
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 2
texture = ExtResource("2_esuf0")
expand_mode = 1

[node name="ItemSprite" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 115.0
offset_bottom = 115.0
mouse_filter = 2

[node name="Item" type="TextureRect" parent="ItemSprite"]
z_index = 1
layout_mode = 2
offset_left = -7.0
offset_top = -7.0
offset_right = 63.0
offset_bottom = 63.0
mouse_filter = 2
expand_mode = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
